Rise of the Coffee Elf (Java 11 Adoption) (#5501)
* eleven

* circle

* eleven

* fix

* eh

* self-own

* testing

* that was removed, too

* more unused gc stuff

* Add generated changelog entries

* fix jvm gc args

* use undeprecated options

* more fix

* jdk 11

* bleh

* apparently sometimes we are in the trees and sometimes we are not

* spasm

* docker docker docker

* fix

Co-authored-by: svc-changelog <svc-changelog@palantir.com>